Fixed incorrect path in tests which caused tests to fail

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "express",
     "joi",
-    "middleware"
+    "middleware",
+    "validation"
   ],
   "author": "Josh Holloway",
   "license": "MIT",
