--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
   },
   "homepage": "https://github.com/threadster/express-joi-validator",
   "dependencies": {
-    "boom": "^2.6.1",
-    "extend": "^2.0.0",
-    "joi": "^5.1.0"
+    "boom": "2.6.x",
+    "extend": "2.0.x",
+    "joi": "5.1.x"
   },
   "peerDependencies": {
-    "joi": "^5.1.0"
+    "joi": "5.1.x"
   },
   "devDependencies": {
-    "body-parser": "^1.10.1",
-    "chai": "^1.10.0",
-    "express": "^4.10.6",
-    "istanbul": "^0.3.5",
-    "mocha": "^2.1.0",
-    "supertest": "^0.15.0"
+    "body-parser": "1.10.x",
+    "chai": "1.10.x",
+    "express": "4.10.x",
+    "istanbul": "0.3.x",
+    "mocha": "2.1.x",
+    "supertest": "0.15.x"
   }
 }
